--- a/src/app/components/list-pokemons/list-pokemons.component.html
+++ b/src/app/components/list-pokemons/list-pokemons.component.html
@@ -1,1 +1,3 @@
-<p>list-pokemons works!</p>
+<div class="grid-container">
+    <app-card-pokemon *ngFor="let i of numbers;" class="grid-item"></app-card-pokemon>
+</div>
